Tue Sep 10 14:07:36 1996  Tom Yu  <tlyu@mit.edu>

	* ftpd.M: remove ".so man1/header.doc"

Mon Jul 29 22:37:05 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Determine sizeof short, int, long for secure.c

Tue Jul 23 23:13:07 1996  Marc Horowitz  <marc@mit.edu>

	* ftpd.c (auth_data): the logic which dealt with multiple acceptor
 	names and fallback was just broken.

Wed Jul 10 16:38:01 1996  Marc Horowitz  <marc@mit.edu>

	* ftpd.c (store), ftpcmd.y (STOR, APPE, STOU): rename store() to
 	store_file() to avoid conflict with dbm store() function
	* ftpd.c (delete), ftpcmd.y (DELE): rename delete() to
 	delete_file() to avoid conflict with the dbm delete() function

Thu Jun 13 18:35:19 1996  Kevin L Mitchell  <klmitch@mit.edu>

	* ftpd.c (authdata): misplaced braces caused server to not be able to
		use ftp principle if it was present.  Client looks for ftp
		first, then tries host; ftpd was looking only for host.

Mon Jun  3 16:12:59 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in, configure.in: back out previous changes and use
		Ezra's patches instead.

Sun Jun  2 22:08:17 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in, Makefile.in: only link getdtablesize.o if needed

Thu Mar 28 21:07:20 1996  Ken Raeburn  <raeburn@cygnus.com>

	* ftpcmd.y: Define unix for HP-UX.

Mon Mar 18 12:12:20 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add AC_HEADER_STDARG

	* ftpcmd.y, ftpd.c: Declard STDARG if HAVE_STDARG_H is
		declared. 

Fri Mar 15 14:16:41 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* ftpd.c (auth_data): Do not fail if last gss_service is not
		present in keytab. If no services present, return a useful
		minor error status.

Fri Mar 15 01:24:39 1996  Richard Basch  <basch@lehman.com>

        * configure.in, ftpd.c: Added shadow password support.

Wed Mar 13 20:05:52 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c (auth_data): use gethostbyname to canonicalize local host
	name, just like krb5_sname_to_principal does.
